<resources>
    <string name="app_name">money-app</string>
    <string name="etEmail">Email</string>
    <string name="etPassword">Password</string>
    <string name="etLogin">Login</string>
    <string name="etRegister">Register</string>
    <string name="etLoginText">Login to Money App</string>
    <string name="etConfirmPassword">Confirm Password</string>
    <string name="accountNumber">Account Number</string>
    <string name="accountHolder">Account Holder</string>
    <string name="accountType">Account Type</string>
    <string name="accountBalance">Account Balance</string>
    <string name="sourceAccount">Source Account Number</string>
    <string name="destinationAccount">Destination Account Number</string>
    <string name="amount">Amount</string>
    <string name="transferMoney">Transfer Money</string>
    <string name="transactionFrom"> From: </string>
    <string name="transactionTo"> To: </string>
    <string name="timestamp">Timestamp</string>
    <string name="welcomeMessage">Welcome to Money App</string>
    <string name="navHome">Home</string>
    <string name="navTransfer">Transfer</string>
    <string name="navAccounts">Accounts</string>
    <string name="navHistory">History</string>
    <string name="navLogout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>