<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:title="@string/navHome"
        android:icon="@drawable/ic_home" />

    <item
        android:id="@+id/nav_accounts"
        android:title="@string/navAccounts"
        android:icon="@drawable/ic_accounts" />

    <item
        android:id="@+id/nav_transfer"
        android:title="@string/navTransfer"
        android:icon="@drawable/ic_transfer" />

    <item
        android:id="@+id/nav_history"
        android:title="@string/navHistory"
        android:icon="@drawable/ic_history" />

    <item
        android:id="@+id/nav_logout"
        android:title="@string/navLogout"
        android:icon="@drawable/ic_logout" />
</menu>