<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/transfer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.TransferActivity">

    <EditText
        android:id="@+id/etSourceAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/sourceAccount"
        android:inputType="number" />

    <EditText
        android:id="@+id/etDestinationAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/destinationAccount"
        android:inputType="number" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/amount"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnTransfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transferMoney"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"/>

</LinearLayout>